# detector-api

./: .gitignore  README.md  db_test.ipynb  face_test.ipynb  member.json  pyproject.toml
app/core/: face_detect.py
app/data/: app.db  sql_util.py
app/lib/: face_recognition.py
app/models/: recognition_model.joblib
static/: index.html
