[project]
name = "detector-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "fastapi>=0.116.2",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.35.0",
]
